--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "59daf258",
+   "id": "244bcbf6",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "59ff6536",
+   "id": "da8150c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5ddbbb18",
+   "id": "30d5f3c3",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "335a1704",
+   "id": "a359fad4",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "fc21c93e",
+   "id": "edd8c73f",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b83556cb",
+   "id": "c5ed6f0c",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "e7ebce97",
+   "id": "fb78433c",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "88f4e0ad",
+   "id": "b18edf4c",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5ef22771",
+   "id": "97451634",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "03eaeaac",
+   "id": "cfd6d149",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a725c75b",
+   "id": "2ad54af9",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "08813aa6",
+   "id": "445706b9",
    "metadata": {},
    "outputs": [
     {
@@ -727,30 +727,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0542925c",
+   "id": "a75fe372",
    "metadata": {},
    "source": [
-    "Мы видим, что точность не наиже 95% процентов достежима для текущей архетиктуры сети за 20 эпох при использование оптимизаторов SGD и Ftrl."
+    "Мы видим, что точность не ниже 95% процентов достижима для текущей архитектуры сети за 20 эпох при использовании оптимизаторов SGD и Ftrl."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "853a0ab2",
+   "id": "6cae0bd5",
    "metadata": {},
    "source": [
-    "Adam- обучение с использованием этого оптимизатора довольно медлянное, и не эффективное при данной архетектуре и наборе данных. При увеличиние значения параметра learning_rate точность обучения заметно падает.\n",
+    "Adam- обучение с использованием этого оптимизатора довольно медленное, и не эффективное при данной архитектуре и наборе данных. При увеличении значения параметра learning_rate точность обучения заметно падает.\n",
     "\n",
-    "SGD- обучение с использованием этого оптимизатора  очень эффективное и быстрое при данной архетектуре и наборе данных. При увеличиние значения параметра learning_rate точность обучения значительно не изменяется.\n",
+    "SGD- обучение с использованием этого оптимизатора очень эффективное и быстрое при данной архитектуре и наборе данных. При увеличении значения параметра learning_rate точность обучения значительно не изменяется.\n",
     "\n",
-    "Ftrl- обучение с использованием этого оптимизатора очень эффективное, но медляннее SGD при данной архетектуре и наборе данных. При увеличиние значения параметра learning_rate точность обучения незначительно падает.\n",
+    "Ftrl- обучение с использованием этого оптимизатора очень эффективное, но медленнее SGD при данной архитектуре и наборе данных. При увеличении значения параметра learning_rate точность обучения незначительно падает.\n",
     "\n",
-    "Можнос делать вывод, что в данной ситуации наиболее эффективным решением будет использование оптимизатора SGD, введу его значительной скорости и точности."
+    "Можнос делать вывод, что в данной ситуации наиболее эффективным решением будет использование оптимизатора SGD, введу его значительной скорости и точности.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "71c174a1",
+   "id": "3750570f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "47d43555",
+   "id": "c4208fd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "8d660bec",
+   "id": "ee9bcfaa",
    "metadata": {},
    "outputs": [
     {
